--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
     <head>
+        <script>document.write('<base href="' + document.location + '" />');</script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
