--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <script>document.write('<base href="' + document.location + '" />');</script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Poiret+One" rel="stylesheet">
     </head>
     <body>
         <my-app> Loading... </my-app>
